plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.170'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main
    }

    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        programArgument '--nogui'
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenLocal()
    maven { // JEI
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven { // TOP
        url = "https://maven.k-4u.nl"
    }
    maven { // EMI
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven { // Jade
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://maven.squiddev.cc"
        content {
            includeGroup("cc.tweaked")
        }
    }
    maven { url = "https://jitpack.io" }
    maven { url = "https://maven.tterrag.com/" }
    maven { url = "https://modmaven.dev/" }
    maven { url = "https://maven.firstdarkdev.xyz/snapshots/" }
    maven { url = "https://maven.architectury.dev" }
    maven { url = "https://maven.saps.dev/minecraft" }
    maven { url = "https://maven.gtceu.com" }
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate Fork
}


dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
    compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    runtimeOnly "dev.emi:emi-neoforge:${emi_version}"

    compileOnly("mcjty.theoneprobe:theoneprobe:${top_version}:api")
    localRuntime("mcjty.theoneprobe:theoneprobe:${top_version}")
    compileOnly("curse.maven:jade-api-324717:${jade_id}")
    localRuntime("curse.maven:jade-324717:${jade_id}")
    localRuntime("curse.maven:jade-addons-583345:${jade_addons_id}")

    compileOnly("cc.tweaked:cc-tweaked-${minecraft_version}-forge-api:${cc_version}")
    runtimeOnly("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_version}")

    compileOnly "com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}"

//    runtimeOnly "curse.maven:spark-361579:4738952"

//    implementation "dev.latvian.mods:rhino-forge:${rhino_version}"
//    implementation "dev.architectury:architectury-forge:${architectury_version}"
    implementation "mekanism:Mekanism:${minecraft_version}-${mekanism_version}"

    compileOnly "curse.maven:sedna-511276:${sedna_version}"
    compileOnly "curse.maven:markdownmanual-502485:${md_version}"
    compileOnly "curse.maven:oc2r-1037738:${oc2_version}"

    compileOnly "vazkii.patchouli:Patchouli:1.21-${patchouli_version}:api"
    runtimeOnly "vazkii.patchouli:Patchouli:1.21-${patchouli_version}"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
